[package]
name = "screeps-local-visuals"
version = "0.1.0"
edition = "2021"
authors = ["Joe Ciskey"]
description = "A library for the programmable MMO Screeps that allows tools to produce images of game data without relying on the game engine for rendering"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jciskey/screeps-local-visuals"
keywords = ["screeps", "visualization"]
categories = ["graphics", "multimedia::images", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
imageproc = "0.23.0"
num-complex = "0.4.5"
rusttype = "0.9.3"
